fix-gap-3-sections

--- a/src/sass/main/_hotel-main.scss
+++ b/src/sass/main/_hotel-main.scss
@@ -177,7 +177,9 @@
   line-height: 1.25;
   letter-spacing: 0.02em;
   color: var(--last-accent-color);
-
+  @media screen and (min-width:320px) and (max-width:325px) {
+    width: 128px;
+    }
   @media screen and (min-width: 1024px) {
     min-width: 312px;
     font-size: 16px;
