--- a/src/sass/restaurant/_about-rest.scss
+++ b/src/sass/restaurant/_about-rest.scss
@@ -101,6 +101,9 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 32px;
+  @media screen and (min-width:320px) and (max-width:413px) {
+    gap: 5px;
+  }
   @media screen and (min-width: 1024px) {
     transform: translateY(-12%);
     margin-bottom: 0;
